--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -2,45 +2,22 @@
     font-family: SegouUI, monospace;
     color: #616161;
     user-select: none;
-    background-color: #fdfdfd;
-}
-.navigation-menu{
     background-color: aliceblue;
+}
+.header {
+    background-color: aliceblue;
+    height: 20px;
     padding: 4pt;
-    width: 200px;
 }
-.navigation-menu ul{
-    padding-left: 4pt;
+.content{
+    height: 100%;
 }
-.navigation-menu[static]{
-
+.container{
+    width: 100%;
+    height: 100%;
+    border: solid gray 1pt;
+    overflow-y: scroll;
 }
-.navigation-menu[dynamic]{
-    top: 24pt;
-    left: 0;
-    position: absolute;
-    border-radius: 0 12pt 12pt 0;
-    padding-right: 12pt;
-}
-.navigation-menu a{
-    color: gray;
-    font-size: 8pt;
-    float: right;
-    cursor: pointer;
-}
-.navigation-menu a:hover{
-    visibility: visible;
-    text-decoration: underline;
-}
-.navigation-menu li{
-    margin: 2pt;
-    padding: 4pt;
-    list-style: none;
-    border-bottom: dotted gray 1pt;
-}
-.navigation-menu li:hover{
-    background-color: #ffffff;
-}
-.navigation-menu * {
-    background: transparent;
+.container-item-*{
+    margin: 1pt 0;
 }
