--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -10,6 +10,9 @@ body{
 button{
     border: solid darkgray 1.2pt;
     min-width: 70pt;
+    border-radius: 8pt;
+    font-size: 10pt;
+    color: gray;
 }
 button:hover{
     box-shadow: 0 0 4pt 0 gray;
