--- a/src/main/webapp/css/ModalView.css
+++ b/src/main/webapp/css/ModalView.css
@@ -1,3 +1,8 @@
+.modal-wrapper{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
 .modal-body{
     border: solid gray 1.2pt;
     border-radius: 8pt;
