--- a/src/main/webapp/css/DataContainer.css
+++ b/src/main/webapp/css/DataContainer.css
@@ -12,6 +12,7 @@
     position: relative;
     border: solid gray 1pt;
     margin: 2pt;
+    padding: 2pt 4pt;
     color: #bebebe;
 }
 .container-item b{
@@ -20,10 +21,16 @@
 .container-item:hover{
     box-shadow: 0 0 4pt 0 gray;
 }
-.container-item span{
-    padding: 0 6pt;
-    margin: 0 2pt;
-    display: inline-block;
+.mini-close{
+    border-radius: 8pt;
+    padding: 0 5px;
+    position: relative;
+    left: -22pt;
+    color: lightgray;
+}
+.mini-close:hover{
+    color: gray;
+    text-shadow: 0 0 2px gray;
 }
 .container-item .row{
     margin: 2pt;
