--- a/src/main/webapp/css/TransportList.css
+++ b/src/main/webapp/css/TransportList.css
@@ -3,5 +3,6 @@
     background: #ffffff;
     margin: 1pt;
     border-radius: 4pt;
-    padding: 0 4pt;
+    padding: 0 8pt;
+    font-size: 10pt;
 }
