--- a/src/main/webapp/css/DataContainer.css
+++ b/src/main/webapp/css/DataContainer.css
@@ -13,7 +13,13 @@
     border: solid gray 1pt;
     margin: 2pt;
     padding: 2pt 4pt;
-    color: #bebebe;
+    border-radius: 8pt;
+}
+.container-item span{
+    display: inline-block;
+    /*background-color: rgba(220, 220, 192, 0.85);*/
+    padding: 0 4pt;
+    border: solid 1pt;
 }
 .container-item b{
     color: #0a0a0a;
