--- a/src/main/webapp/css/DataContainer.css
+++ b/src/main/webapp/css/DataContainer.css
@@ -10,19 +10,27 @@
 }
 .container-item{
     position: relative;
-    border: solid gray 1pt;
+    border: solid gray 1.5pt;
     margin: 2pt;
-    padding: 2pt 4pt;
     border-radius: 8pt;
+    overflow: hidden;
+}
+.container-item .upper-row{
+    padding: 4pt;
+    border-bottom: solid gray 1.2pt;
+    background-color: rgba(0, 221, 28, 0.16);
 }
 .container-item span{
     display: inline-block;
     /*background-color: rgba(220, 220, 192, 0.85);*/
     padding: 0 4pt;
-    border: solid 1pt;
+    /*border-bottom: dotted 1pt;*/
 }
 .container-item b{
     color: #0a0a0a;
+    text-decoration: underline;
+    border: solid gray 1pt;
+    padding: 0 2pt;
 }
 .container-item:hover{
     box-shadow: 0 0 4pt 0 gray;
