--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -34,6 +34,11 @@ button:focus, input:focus{
 .header * {
     background-color: transparent;
 }
+.filter{
+    width: 100%;
+    overflow-y: scroll;
+    background-color: #d3dbe2;
+}
 .modal-layer{
     width: 100%;
     height: 100%;
