--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -36,6 +36,7 @@ button:focus, input:focus{
 }
 .filter{
     width: 100%;
+    height: 100%;
     overflow-y: scroll;
     background-color: #d3dbe2;
 }
