--- a/src/main/webapp/css/TransportList.css
+++ b/src/main/webapp/css/TransportList.css
@@ -1,8 +1,6 @@
 .vehicle-number{
-    border: solid #20003c 1.2pt;
+    border-left: solid #20003c 1.2pt;
+    border-right: solid #20003c 1.2pt;
     background: #ffffff;
-    margin: 1pt;
-    border-radius: 4pt;
-    padding: 0 8pt;
     font-size: 10pt;
 }
