--- a/src/main/webapp/css/filter.css
+++ b/src/main/webapp/css/filter.css
@@ -1,8 +1,8 @@
 .filter{
-    width: 100%;
     height: 100%;
     overflow-y: scroll;
     background-color: #d3dbe2;
+    width: 190px;
 }
 .filter::-webkit-scrollbar {
     width: 2px;
