--- a/src/main/webapp/css/shortcuts.css
+++ b/src/main/webapp/css/shortcuts.css
@@ -1,18 +1,42 @@
 .shortCuts{
+    font-size: 10pt;
+    display: flex;
+    height: 100%;
+    transition: ease 0.2s
+}
+.shortCuts .cuts-wrapper{
+    display: inline-block;
+    background-color: #262626;
     width: 100%;
     height: 100%;
-    background-color: #262626;
-
-    font-size: 10pt;
+    transition: ease 0.2s
+}
+.shortCuts .cuts{
+    border: none;
     padding: 2px;
 }
+.dynamicCutter{
+    position: absolute;
+    top: 0;
+    width: 10px;
+    overflow-x: hidden;
+
+}
+.dynamicShow {
+    transform: translateX(-340px);
+    width: 350px;
+    transition: ease 0.2s
+}
+
 .shortCuts * {
     color: white;
 }
+
 .shortCuts .title{
     width: 100%;
-    border-bottom: solid white 1pt;
     display: inline-block;
+    background-color: white;
+    color: black;
 }
 .shortCuts .block{
     overflow-y: scroll;
@@ -21,8 +45,16 @@
 }
 .shortCuts .shower {
     height: 100%;
-    width: 8px;
-    position: absolute;
-    border-radius: 8px 0 0 8px;
+    width: 14px;
+    border-radius: 14px 0 0 14px;
     background-color: #4c7b7b;
+    display: inline-block;
+}
+.dynamicCutter .shower .direction-sign{
+    position: absolute;
+    display: inline-block;
+    width: 14px;
+    text-align: center;
+    top: 50%;
+    bottom: 50%;
 }
