--- a/src/main/webapp/css/date-picker.css
+++ b/src/main/webapp/css/date-picker.css
@@ -4,18 +4,57 @@
     font-size: 10pt;
 }
 .date-picker .v-date-picker-title{
-    background-color: aliceblue;
-    padding: 0 4pt;
+    display:flex;
+    justify-content:space-between;
+    flex-direction:column;
+    flex-wrap:wrap;
+    line-height:1
 }
 .date-picker .v-date-picker-header{
-    text-align: center;
+    padding:4px 16px;
+    align-items:center;
+    display:flex;
+    justify-content:space-between;
+    position:relative;
 }
-.date-picker .v-date-picker-header *{
-    display: inline-block;
-}
+.v-date-picker-title__year{
+    align-items:center;
+    display:inline-flex;
+    font-size:14px;
+    font-weight:500;
+    margin-bottom:8px}
+.v-date-picker-title__date{
+    font-size:24px;
+    text-align:left;
+    font-weight:500;
+    position:relative;
+    overflow:hidden;
+    padding-bottom:8px;
+    margin-bottom:-8px}
+
+/*.date-picker .v-date-picker-header *{*/
+    /*display: inline-block;*/
+/*}*/
 .date-picker button{
     min-width: 0;
     border: none;
-    color: white;
     padding: 0;
+}
+.date-picker .v-date-picker-header__value button{
+    font-size: 18px;
+    padding: 0 12px;
+    border-radius: 0;
+}
+.date-picker table{
+    border: solid gray 1pt;
+    margin: 4px;
+}
+.date-picker .v-date-picker-table--date .v-btn{
+    height:32px;
+    width:32px
+}
+.v-date-picker-table .v-btn{
+    z-index:auto;
+    margin:0;
+    font-size:12px
 }
