--- a/src/main/webapp/css/DataContainer.css
+++ b/src/main/webapp/css/DataContainer.css
@@ -28,7 +28,7 @@
 .container-item span{
     display: inline-block;
     /*background-color: rgba(220, 220, 192, 0.85);*/
-    padding: 0 4pt;
+    /*padding: 0 4pt;*/
     /*border-bottom: dotted 1pt;*/
 }
 .container-item b{
