--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -40,6 +40,7 @@ button:focus, input:focus{
 
 .container-header{
     display: inline-block;
+    padding: 1pt;
     vertical-align: text-bottom;
 }
 
