--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -162,3 +162,48 @@ a:hover{
 input.error {
     border-color: orangered;
 }
+
+.edit-menu-header{
+    position: relative;
+    margin: 2pt;
+    color: #808080;
+}
+.edit-menu-header .arrow{
+    z-index: 1;
+    position: absolute;
+    right: 50%;
+}
+.edit-menu-header:hover .arrow{
+    color: white;
+
+}
+.edit-menu-header:hover .edit-menu{
+    display: block;
+}
+.edit-menu{
+    display: none;
+    position: absolute;
+    right: -2px;
+    top: 2px;
+    background-color: #909090;
+    padding: 1pt 4pt;
+    font-size: 8pt;
+    border-radius: 2pt;
+    box-shadow: 0 0 6px 4px white;
+    z-index: 1;
+}
+.edit-menu span{
+    color: #d1d1d1;
+    width: 100%;
+    display: inline-block;
+    padding: 8pt 2pt;
+}
+
+.edit-menu span:hover{
+    color: #f0f0f0;
+}
+.page-container{
+    padding: 4pt;
+    margin: 2pt;
+    box-shadow: 0 0 4px 2px gray;
+}
