--- a/src/main/webapp/css/ModalView.css
+++ b/src/main/webapp/css/ModalView.css
@@ -13,8 +13,8 @@
     bottom: 50%;
     left: 0;
     right: 0;
-    height: fit-content;
-    width: fit-content;
+    height: max-content;
+    width: max-content;
 }
 .modal-header{
     border-radius: 6pt 6pt 0 0;
