--- a/src/main/webapp/css/Application.css
+++ b/src/main/webapp/css/Application.css
@@ -26,7 +26,7 @@ button:focus, input:focus{
 }
 
 .header {
-    background-color: #d3dbe2;
+
     width: 100%;
 }
 .header-content{
@@ -52,7 +52,6 @@ button:focus, input:focus{
     background-color: rgba(240, 248, 255, 0.65);
 }
 .wrapper {
-    border: solid gray 1pt;
     height: 100%;
     overflow-y: scroll;
 }
@@ -206,4 +205,7 @@ input.error {
     padding: 4pt;
     margin: 2pt;
     box-shadow: 0 0 4px 2px gray;
+}
+.body-table {
+    border-collapse: collapse;
 }
