--- a/src/main/webapp/css/Coverlet.css
+++ b/src/main/webapp/css/Coverlet.css
@@ -1,7 +1,32 @@
-.coverlet{
+.coverlet {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: rgba(255, 165, 0, 0.35);
-    display: none;
+    background-color: rgba(34, 136, 96, 0.15);
+    z-index: 100;
 }
+.lds-dual-ring {
+    display: inline-block;
+    width: 64px;
+    height: 64px;
+}
+.lds-dual-ring:after {
+    content: " ";
+    display: block;
+    width: 46px;
+    height: 46px;
+    margin: 1px;
+    border-radius: 50%;
+    border: 5px solid;
+    border-color: #fff transparent #fff transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
