--- a/src/main/webapp/css/chat/chat-holder.css
+++ b/src/main/webapp/css/chat/chat-holder.css
@@ -10,16 +10,16 @@
 }
 .chat-button-holder{
     position: absolute;
-    right: 10px;
-    bottom: 10px;
+    right: 40px;
+    bottom: 20px;
 }
 .chat-button{
     color: black;
     font-size: 20pt;
-    background-color: aliceblue;
+    background-color: white;
     border-radius: 50%;
-    padding: 4pt;
-
+    padding: 6pt;
+    border: solid #d3dbe2 2.2pt;
 }
 .invisible-close-button{
     background-color: rgba(10, 10, 10, 0.15);
