--- a/client/app/src/main/res/layout/activity_message.xml
+++ b/client/app/src/main/res/layout/activity_message.xml
@@ -10,4 +10,10 @@
         android:id="@+id/toolbar"
         style="@style/Toolbar" />
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/action_sign_in" />
+
 </android.support.constraint.ConstraintLayout>
