--- a/client/app/src/main/res/layout/loading.xml
+++ b/client/app/src/main/res/layout/loading.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="ua.quasilin.chekmanszpt.LoadingActivity">
+    tools:context="ua.quasilin.chekmanszpt.activity.StartActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
