--- a/client/app/src/main/res/values/styles.xml
+++ b/client/app/src/main/res/values/styles.xml
@@ -7,6 +7,11 @@
         <item name="android:background">@color/colorPrimary</item>
     </style>
 
+    <style name="TextLabel">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
