--- a/client/app/src/main/res/layout/activity_contacts.xml
+++ b/client/app/src/main/res/layout/activity_contacts.xml
@@ -29,6 +29,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
+        android:id="@+id/contactList"
         android:layout_width="364dp"
         android:layout_height="435dp"
         android:layout_marginBottom="8dp"
