--- a/client/app/src/main/res/layout/activity_contacts.xml
+++ b/client/app/src/main/res/layout/activity_contacts.xml
@@ -4,51 +4,45 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="ua.quasilin.chekmanszpt.activity.messages.ContactsActivity">
 
     <Button
         android:id="@+id/closeContacts"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="x"
+        android:text="@string/close"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="298dp"
-        android:layout_height="21dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/textView30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/contacts"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:theme="@style/TextLabel"
+        app:layout_constraintBottom_toTopOf="@+id/contactList"
         app:layout_constraintStart_toEndOf="@+id/closeContacts"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/contactList"
-        android:layout_width="364dp"
-        android:layout_height="435dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:contentDescription="@string/search"
-        android:ems="10"
-        android:inputType="textPersonName"
+        android:layout_marginTop="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/closeContacts" />
+        app:layout_constraintTop_toTopOf="parent">
+    </ListView>
+
+
 </android.support.constraint.ConstraintLayout>
