--- a/client/app/src/main/res/layout/activity_chats.xml
+++ b/client/app/src/main/res/layout/activity_chats.xml
@@ -10,6 +10,13 @@
         android:id="@+id/toolbar"
         style="@style/Toolbar" />
 
-
+    <ListView
+        android:id="@+id/chatList"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </android.support.constraint.ConstraintLayout>
