--- a/client/app/src/main/res/layout/login_activity.xml
+++ b/client/app/src/main/res/layout/login_activity.xml
@@ -118,17 +118,17 @@
             app:layout_constraintTop_toBottomOf="@+id/loginButton"
             app:layout_constraintVertical_bias="1.0" />
 
-        <Spinner
-            android:id="@+id/usersSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <ProgressBar
+            android:id="@+id/signProgress"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/loginInput" />
+            app:layout_constraintBottom_toBottomOf="@+id/loginButton"
+            app:layout_constraintEnd_toStartOf="@+id/loginButton"
+            app:layout_constraintTop_toTopOf="@+id/loginButton" />
 
     </android.support.constraint.ConstraintLayout>
 
