--- a/client/app/src/main/res/layout/message_list_row.xml
+++ b/client/app/src/main/res/layout/message_list_row.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/messageRow"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/messageRow"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="4dp">
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/messageBody"
